--- a/deploy/crds/crd-challenges.yaml
+++ b/deploy/crds/crd-challenges.yaml
@@ -17,6 +17,10 @@ spec:
     listKind: ChallengeList
     plural: challenges
     singular: challenge
+    categories:
+      - all
+      - cert-manager
+      - acme
   scope: Namespaced
   conversion:
     # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
