--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -17,6 +17,9 @@ spec:
     listKind: ClusterIssuerList
     plural: clusterissuers
     singular: clusterissuer
+    categories:
+      - all
+      - cert-manager
   scope: Cluster
   conversion:
     # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
