--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -17,6 +17,9 @@ spec:
     listKind: IssuerList
     plural: issuers
     singular: issuer
+    categories:
+      - all
+      - cert-manager
   scope: Namespaced
   conversion:
     # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
