Remove all and rename acme to cert-manager-acme
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/deploy/crds/crd-orders.yaml
+++ b/deploy/crds/crd-orders.yaml
@@ -18,9 +18,8 @@ spec:
     plural: orders
     singular: order
     categories:
-      - all
       - cert-manager
-      - acme
+      - cert-manager-acme
   scope: Namespaced
   conversion:
     # a Webhook strategy instruct API server to call an external webhook for any conversion between custom resources.
