--- a/pkg/controller/certificates/trigger/policies/BUILD.bazel
+++ b/pkg/controller/certificates/trigger/policies/BUILD.bazel
@@ -34,6 +34,7 @@ go_test(
     deps = [
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/client/listers/certmanager/v1:go_default_library",
         "//pkg/controller/certificates/internal/test:go_default_library",
         "//test/unit/gen:go_default_library",
         "//test/unit/listers:go_default_library",
@@ -42,6 +43,7 @@ go_test(
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
