--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -862,8 +862,8 @@ spec:
                       type: array
                       items:
                         type: string
-                    ocspServer:
-                      description: The OCSP server is an X.509 v3 extension that defines the url of the OCSP responder. The OCSP responder can be queried for the revocation status of an issued certificate. If not set the certificate wil be issued without the OCSP server set.
+                    ocspServers:
+                      description: The OCSP server list is an X.509 v3 extension that defines a list of URLs of OCSP responders. The OCSP responders can be queried for the revocation status of an issued certificate. If not set, the certificate wil be issued with no OCSP servers set. For example, an OCSP server URL could be "http://ocsp.int-x3.letsencrypt.org".
                       type: array
                       items:
                         type: string
@@ -1896,8 +1896,8 @@ spec:
                       type: array
                       items:
                         type: string
-                    ocspServer:
-                      description: The OCSP server is an X.509 v3 extension that defines the url of the OCSP responder. The OCSP responder can be queried for the revocation status of an issued certificate. If not set the certificate wil be issued without the OCSP server set.
+                    ocspServers:
+                      description: The OCSP server list is an X.509 v3 extension that defines a list of URLs of OCSP responders. The OCSP responders can be queried for the revocation status of an issued certificate. If not set, the certificate wil be issued with no OCSP servers set. For example, an OCSP server URL could be "http://ocsp.int-x3.letsencrypt.org".
                       type: array
                       items:
                         type: string
@@ -2932,8 +2932,8 @@ spec:
                       type: array
                       items:
                         type: string
-                    ocspServer:
-                      description: The OCSP server is an X.509 v3 extension that defines the url of the OCSP responder. The OCSP responder can be queried for the revocation status of an issued certificate. If not set the certificate wil be issued without the OCSP server set.
+                    ocspServers:
+                      description: The OCSP server list is an X.509 v3 extension that defines a list of URLs of OCSP responders. The OCSP responders can be queried for the revocation status of an issued certificate. If not set, the certificate wil be issued with no OCSP servers set. For example, an OCSP server URL could be "http://ocsp.int-x3.letsencrypt.org".
                       type: array
                       items:
                         type: string
@@ -3968,8 +3968,8 @@ spec:
                       type: array
                       items:
                         type: string
-                    ocspServer:
-                      description: The OCSP server is an X.509 v3 extension that defines the url of the OCSP responder. The OCSP responder can be queried for the revocation status of an issued certificate. If not set the certificate wil be issued without the OCSP server set.
+                    ocspServers:
+                      description: The OCSP server list is an X.509 v3 extension that defines a list of URLs of OCSP responders. The OCSP responders can be queried for the revocation status of an issued certificate. If not set, the certificate wil be issued with no OCSP servers set. For example, an OCSP server URL could be "http://ocsp.int-x3.letsencrypt.org".
                       type: array
                       items:
                         type: string
