--- a/deploy/manifests/BUILD.bazel
+++ b/deploy/manifests/BUILD.bazel
@@ -50,6 +50,7 @@ genrule(
     outs = ["unlicensed.yaml"],
     cmd = " ".join([
         "cat",
+        "$(location //deploy/crds:crds)",
         "$(location 01-namespace.yaml)",
         "$(location manifests.helm)",
         "> $@",
